--- a/index.html
+++ b/index.html
@@ -3,65 +3,33 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-<title>Poster AR · Estable + Calibración</title>
+<title>Poster AR · Start fijo</title>
 <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-
-  /* Cámara en cover detrás del canvas */
+  /* Cámara detrás del canvas */
   video[playsinline]{
     position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
     object-fit:cover!important;z-index:0!important;background:#000!important
   }
-
-  /* Canvas WebGL encima de la cámara */
-  a-scene{position:fixed!important;inset:0!important;z-index:2!important; pointer-events:none!important;}
+  /* Canvas/WebGL arriba pero sin capturar eventos */
+  a-scene{position:fixed!important;inset:0!important;z-index:2!important;pointer-events:none!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:none!important}
 
-  /* UI / botones (aseguramos que reciban eventos) */
-  .ui{
-    position:fixed; left:8px; top:8px; display:flex; gap:8px;
-    z-index:9999; pointer-events:auto;
-  }
-  .btn{
-    border:1px solid #2a3a58; background:#0f1522; color:#eaf2ff;
-    border-radius:10px; padding:8px 10px; pointer-events:auto;
-  }
-  .dbg{
-    position:fixed; right:8px; top:8px;
-    background:#0f1522cc; border:1px solid #22324d; border-radius:8px;
-    padding:8px 10px; color:#cfe3ff; font:12px/1.3 system-ui; z-index:9999;
-  }
-
-  /* Panel de calibración */
-  .cal{
-    position:fixed; left:8px; bottom:8px; display:flex; gap:6px; flex-wrap:wrap;
-    max-width:96vw; z-index:9999; pointer-events:auto;
-  }
-  .chip{background:#0f1522;border:1px solid #2a3a58;color:#eaf2ff;border-radius:10px;padding:6px 8px}
+  /* UI por encima y clicable siempre */
+  .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9999;pointer-events:auto}
+  .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
+  .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
+       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:9999;pointer-events:auto}
 </style>
 </head>
 <body>
 <div class="ui">
-  <button id="btnStart" class="btn">📷 Abrir cámara</button>
-  <button id="btnSound" class="btn" hidden>🔊 Activar sonido</button>
+  <button id="btnStart" class="btn" type="button">📷 Abrir cámara</button>
+  <button id="btnSound" class="btn" type="button" hidden>🔊 Activar sonido</button>
 </div>
 <div id="dbg" class="dbg">Cargando…</div>
-
-<!-- UI de calibración -->
-<div id="cal" class="cal">
-  <button data-act="dx-" class="btn">X−</button>
-  <button data-act="dx+" class="btn">X+</button>
-  <button data-act="dy-" class="btn">Y−</button>
-  <button data-act="dy+" class="btn">Y+</button>
-  <button data-act="sc-" class="btn">Scale−</button>
-  <button data-act="sc+" class="btn">Scale+</button>
-  <button data-act="rt-" class="btn">Rot−</button>
-  <button data-act="rt+" class="btn">Rot+</button>
-  <button id="copyUrl" class="btn">🔗 Copiar URL</button>
-  <span id="readout" class="chip"></span>
-</div>
 
 <a-scene id="scene"
   embedded vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:true"
@@ -71,8 +39,10 @@
   style="width:100vw;height:100vh">
 
   <a-assets id="assets" timeout="60000">
-    <img id="overlayImg" crossorigin="anonymous"/>
-    <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
+    <img id="overlayImg" crossorigin="anonymous"
+         src="https://res.cloudinary.com/dtge9nklw/image/upload/v1759311815/poster_sin_foto_cancion_ztjqvw.png"/>
+    <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"
+           src="https://res.cloudinary.com/dtge9nklw/video/upload/f_mp4,vc_h264,ac_aac,br_1200k,vs_30,w_1280/v1759311664/0_Couple_Beach_3840x2160_fgnn6o.mp4"></video>
   </a-assets>
 
   <a-camera look-controls="enabled:false"></a-camera>
@@ -80,207 +50,94 @@
 </a-scene>
 
 <script>
-/* ==== Captura errores temprano (si algo falla, lo verás) ==== */
-const dbg = document.getElementById('dbg');
-const log=(m)=>{ dbg.textContent = m + ' · ' + new Date().toLocaleTimeString(); console.log('[AR]',m); };
-window.addEventListener('error', e=>{ log('JS ERROR: '+(e?.message||e)); });
+(function(){
+  const STATE=document.getElementById('dbg');
+  const say = (m)=>{ STATE.textContent=m; console.log('[AR]',m); };
 
-/* ===== Config fija (tus URLs) ===== */
-const BASE = {
-  t: 'https://res.cloudinary.com/dtge9nklw/raw/upload/v1759341741/targets_10_h3yoq9.mind',
-  d: 'https://res.cloudinary.com/dtge9nklw/image/upload/v1759311815/poster_sin_foto_cancion_ztjqvw.png',
-  pw: 2481, ph: 3508,
-  video: {
-    src: 'https://res.cloudinary.com/dtge9nklw/video/upload/f_mp4,vc_h264,ac_aac,br_1200k,vs_30,w_1280/v1759311664/0_Couple_Beach_3840x2160_fgnn6o.mp4',
-    x: 296, y: 316, w: 1890, h: 1682
-  },
-  texts: [
-    { value:'Shape of You', x:200, y:2150, w:2080, h:190, align:'center', color:'#000000' },
-    { value:'Ed Sheeran',   x:200, y:2330, w:2080, h:150, align:'center', color:'#000000' }
-  ],
-  audio: 'https://res.cloudinary.com/dtge9nklw/video/upload/v1759311992/ssvid.app--Ed-Sheeran-Shape-of-You-Lyrics_vyw046.mp3',
-  progress: { x:300, y:2640, w:2060, h:18, bg:'#000000', fill:'#13d77a', knob:'#000000' }
-};
-/* Leer ajustes finos desde la URL (o usar defaults) */
-const qs=new URLSearchParams(location.search);
-const CONF = {
-  ...BASE,
-  dx: +(qs.get('dx')||0), dy: +(qs.get('dy')||0),
-  scale: +(qs.get('scale')||1), rot: +(qs.get('rot')||0),
-  showCal: qs.get('cal')!=='0' // cal=0 para ocultar la UI en producción
-};
-/* ================================= */
+  const scene = document.getElementById('scene');
+  const anchor= document.getElementById('anchor');
+  const btnStart = document.getElementById('btnStart');
+  const btnSound = document.getElementById('btnSound');
 
-const scene=document.getElementById('scene');
-scene.setAttribute('mindar-image', `imageTargetSrc: ${CONF.t}; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;`);
-scene.addEventListener('loaded', ()=>{ try{ scene.renderer.setClearColor(0x000000,0); }catch(e){} });
+  // --- TU TARGET (.mind)
+  const TARGET_URL = 'https://res.cloudinary.com/dtge9nklw/raw/upload/v1759341741/targets_10_h3yoq9.mind';
+  scene.setAttribute('mindar-image', `imageTargetSrc: ${TARGET_URL}; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;`);
 
-/* Cámara en cover asegurada */
-new MutationObserver(()=>{ document.querySelectorAll('video').forEach(v=>{
-  if(v.srcObject instanceof MediaStream){
-    Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
+  // Cámara en cover garantizada si MindAR reinyecta el <video>
+  new MutationObserver(()=>{ document.querySelectorAll('video').forEach(v=>{
+    if(v.srcObject instanceof MediaStream){
+      Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
+    }
+  });}).observe(document.documentElement,{subtree:true,childList:true});
+
+  // Overlay y vídeo (rectángulo medido en px del diseño base 2481x3508)
+  const PW=2481, PH=3508, H=PH/PW;
+  const px2=(x,y,w,h)=>({wn:w/PW,hn:h/PW,cx:-0.5+(x+w/2)/PW,cy:H/2-(y+h/2)/PW});
+
+  const root=document.createElement('a-entity'); anchor.appendChild(root);
+
+  // Overlay completo
+  const overlay=document.createElement('a-plane');
+  overlay.setAttribute('width',1); overlay.setAttribute('height',H);
+  overlay.setAttribute('position','0 0 0.0');
+  overlay.setAttribute('material','shader:flat; src:#overlayImg; transparent:true; side:double; depthTest:false; opacity:1');
+  root.appendChild(overlay);
+
+  // Vídeo
+  const vSlot = {x:296, y:316, w:1890, h:1682}; // ajusta si hace falta
+  const u=px2(vSlot.x,vSlot.y,vSlot.w,vSlot.h);
+  const vPlane=document.createElement('a-plane');
+  vPlane.setAttribute('width',u.wn); vPlane.setAttribute('height',u.hn);
+  vPlane.setAttribute('position',`${u.cx} ${u.cy} 0.03`);
+  vPlane.setAttribute('material','shader:flat; src:#v1; side:double; depthTest:false; opacity:1');
+  root.appendChild(vPlane);
+
+  // COVER de la textura del vídeo
+  const vid=document.getElementById('v1');
+  function cover(){
+    const mesh=vPlane.getObject3D('mesh'); if(!mesh||!mesh.material||!mesh.material.map||!vid.videoWidth) return;
+    const tex=mesh.material.map, vr=vid.videoWidth/vid.videoHeight, rr=vSlot.w/vSlot.h; let rx=1,ry=1,ox=0,oy=0;
+    if(vr>rr){ rx=rr/vr; ry=1; ox=(1-rx)/2; } else { rx=1; ry=vr/rr; oy=(1-ry)/2; }
+    tex.offset.set(ox,oy); tex.repeat.set(rx,ry); tex.needsUpdate=true; mesh.material.needsUpdate=true;
   }
-});}).observe(document.documentElement,{subtree:true,childList:true});
+  vPlane.addEventListener('materialtextureloaded',cover);
+  vid.addEventListener('loadedmetadata',()=>{ vid.play().catch(()=>{}); cover(); }, {once:true});
 
-/* Assets – ¡selección segura por ID! */
-const overlayImgEl = document.getElementById('overlayImg');
-const v1El        = document.getElementById('v1');
-overlayImgEl.src  = CONF.d || '';
-v1El.src          = CONF.video.src;
+  // ======= Inicio de cámara robusto =======
+  async function startAR(){
+    try{
+      const sys  = scene.systems && scene.systems['mindar-image-system'];
+      const comp = scene.components && scene.components['mindar-image'];
+      if(sys && sys.start)         await sys.start();
+      else if(comp && comp.start)  await comp.start();
+      else if (scene.el && scene.el.systems && scene.el.systems['mindar-image-system'])
+        await scene.el.systems['mindar-image-system'].start();
 
-/* Geometría */
-const H = CONF.ph/CONF.pw;
-const px2=(x,y,w,h)=>({ wn:w/CONF.pw, hn:h/CONF.pw, cx:-0.5+(x+w/2)/CONF.pw, cy:H/2 - (y+h/2)/CONF.pw });
-
-/* Anchor + root transformable */
-const anchor=document.getElementById('anchor');
-const root=document.createElement('a-entity');
-function applyTransform(){
-  root.setAttribute('position', `${CONF.dx/CONF.pw} ${-CONF.dy/CONF.pw} 0`);
-  root.setAttribute('scale', `${CONF.scale} ${CONF.scale} 1`);
-  root.setAttribute('rotation', `0 0 ${CONF.rot}`);
-  readout.textContent = `dx:${CONF.dx}px  dy:${CONF.dy}px  scale:${CONF.scale.toFixed(3)}  rot:${CONF.rot}°`;
-}
-applyTransform();
-anchor.appendChild(root);
-
-/* Overlay completo */
-const overlay=document.createElement('a-plane');
-overlay.setAttribute('width',1); overlay.setAttribute('height',H);
-overlay.setAttribute('position','0 0 0.0');
-overlay.setAttribute('material', `shader:flat; ${CONF.d? 'src:#overlayImg;':'color:#00ffaa;'} transparent:true; side:double; depthTest:false; opacity:1`);
-root.appendChild(overlay);
-
-/* Vídeo (sin efectos para encuadrar fino) */
-const v=CONF.video; const u=px2(v.x,v.y,v.w,v.h);
-const vPlane=document.createElement('a-plane');
-vPlane.setAttribute('width',u.wn); vPlane.setAttribute('height',u.hn);
-vPlane.setAttribute('position',`${u.cx} ${u.cy} 0.03`);
-vPlane.setAttribute('material','shader:flat; src:#v1; side:double; depthTest:false; opacity:1');
-root.appendChild(vPlane);
-
-/* COVER de la textura del vídeo */
-function cover(){
-  const mesh=vPlane.getObject3D('mesh'); if(!mesh||!mesh.material||!mesh.material.map||!v1El.videoWidth) return;
-  const tex=mesh.material.map, vr=v1El.videoWidth/v1El.videoHeight, rr=v.w/v.h; let rx=1,ry=1,ox=0,oy=0;
-  if(vr>rr){ rx=rr/vr; ry=1; ox=(1-rx)/2; } else { rx=1; ry=vr/rr; oy=(1-ry)/2; }
-  tex.offset.set(ox,oy); tex.repeat.set(rx,ry); tex.needsUpdate=true; mesh.material.needsUpdate=true;
-}
-vPlane.addEventListener('materialtextureloaded',cover);
-v1El.addEventListener('loadedmetadata',()=>{ v1El.play().catch(()=>{}); cover(); },{once:true});
-
-/* Textos por canvas → textura */
-function addText(slot){
-  const g=px2(slot.x,slot.y,slot.w,slot.h);
-  const p=document.createElement('a-plane');
-  p.setAttribute('width',g.wn); p.setAttribute('height',g.hn);
-  p.setAttribute('position',`${g.cx} ${g.cy} 0.12`);
-  p.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:1');
-
-  const s=2, cw=Math.min(2048,Math.max(64,Math.round(slot.w*s))), ch=Math.min(1024,Math.max(32,Math.round(slot.h*s)));
-  const c=document.createElement('canvas'); c.width=cw; c.height=ch; const ctx=c.getContext('2d');
-  ctx.fillStyle=slot.color; ctx.shadowColor='rgba(0,0,0,.35)'; ctx.shadowBlur=Math.floor(ch*.06); ctx.shadowOffsetY=Math.floor(ch*.03);
-  const fam='600 64px system-ui,Segoe UI,Roboto';
-  let size=Math.floor(ch*.72), lo=12, hi=Math.floor(ch*.9), pad=Math.floor(cw*.04);
-  while(lo<=hi){ const mid=(lo+hi>>1); ctx.font=fam.replace('64px',mid+'px'); if(ctx.measureText(slot.value).width<=cw-2*pad){ size=mid; lo=mid+1; } else hi=mid-1; }
-  ctx.font=fam.replace('64px',size+'px'); ctx.textBaseline='middle';
-  ctx.textAlign=(slot.align==='left'?'left':slot.align==='right'?'right':'center');
-  const x=(slot.align==='left')?pad:(slot.align==='right')?(cw-pad):(cw/2), y=ch/2; ctx.fillText(slot.value,x,y);
-
-  p.addEventListener('loaded',()=>{ const mesh=p.getObject3D('mesh'); if(!mesh) return;
-    const tex=new AFRAME.THREE.CanvasTexture(c); tex.needsUpdate=true; mesh.material.map=tex; mesh.material.needsUpdate=true; });
-  root.appendChild(p);
-}
-BASE.texts.forEach(addText);
-
-/* Audio sencillo + barra de progreso */
-let audio=null, userOK=false, visible=false, prog=null;
-if(BASE.audio){ audio=new Audio(BASE.audio); audio.crossOrigin='anonymous'; audio.preload='auto'; }
-function makeProgress(x,y,w,h,bg,fill,knob){
-  const g=px2(x,y,w,h), group=document.createElement('a-entity'); group.setAttribute('position',`${g.cx-g.wn/2} ${g.cy} 0.09`);
-  const bgp=document.createElement('a-plane'); bgp.setAttribute('width',g.wn); bgp.setAttribute('height',g.hn);
-  bgp.setAttribute('material',`shader:flat; color:${bg}; transparent:true; opacity:0.9; side:double; depthTest:false`); bgp.setAttribute('position',`${g.wn/2} 0 0`);
-  const fillp=document.createElement('a-plane'); fillp.setAttribute('width',0.0001); fillp.setAttribute('height',g.hn);
-  fillp.setAttribute('material',`shader:flat; color:${fill}; transparent:true; side:double; depthTest:false`); fillp.setAttribute('position',`0 0 0.001`);
-  const knobp=document.createElement('a-circle'); knobp.setAttribute('radius',g.hn*0.9/2);
-  knobp.setAttribute('material',`shader:flat; color:${knob}; side:double; depthTest:false`); knobp.setAttribute('position',`0 0 0.002`);
-  group.appendChild(bgp); group.appendChild(fillp); group.appendChild(knobp);
-  let s=0; return {group, set:(p)=>{ const c=Math.max(0,Math.min(1,p||0)); s=s*0.85+c*0.15; const wnow=g.wn*s; fillp.setAttribute('width',wnow); fillp.setAttribute('position',`${wnow/2} 0 0.001`); knobp.setAttribute('position',`${wnow} 0 0.002`);} };
-}
-if(BASE.audio){ prog=makeProgress(BASE.progress.x,BASE.progress.y,BASE.progress.w,BASE.progress.h,BASE.progress.bg,BASE.progress.fill,BASE.progress.knob); root.appendChild(prog.group); }
-
-function tryAudio(){ if(!audio) return; if(visible && userOK){ audio.play().catch(()=>{}); btnSound.hidden=true; } else { audio.pause(); if(visible && !userOK) btnSound.hidden=false; }}
-
-/* Eventos de tracking */
-anchor.addEventListener('targetFound', ()=>{ visible=true; v1El.play().catch(()=>{}); tryAudio(); log('Target FOUND'); });
-anchor.addEventListener('targetLost',  ()=>{ visible=false; v1El.pause(); if(audio) audio.pause(); if(audio && userOK) btnSound.hidden=false; log('Target LOST'); });
-
-/* Ticks (progreso audio) */
-function tick(){
-  if(audio && prog && audio.duration>0){ prog.set(audio.currentTime/audio.duration); }
-  requestAnimationFrame(tick);
-}
-requestAnimationFrame(tick);
-
-/* ===== Inicio de cámara robusto (botón + auto + primer toque) ===== */
-const btnStart = document.getElementById('btnStart');
-const btnSound = document.getElementById('btnSound');
-
-async function startAR() {
-  try {
-    const sys = scene.systems && scene.systems['mindar-image-system'];
-    const comp = scene.components && scene.components['mindar-image'];
-    if (sys && sys.start)         await sys.start();
-    else if (comp && comp.start)  await comp.start();
-    else if (scene.el && scene.el.systems && scene.el.systems['mindar-image-system'])
-      await scene.el.systems['mindar-image-system'].start();
-
-    btnStart.disabled = true;
-    btnStart.textContent = 'Cámara lista';
-    console.log('[AR] Cámara iniciada');
-  } catch(e) {
-    console.warn('[AR] No se pudo iniciar cámara:', e);
-    log('Error al iniciar cámara (permisos o navegador)');
+      btnStart.disabled = true;
+      btnStart.textContent = 'Cámara lista';
+      say('Cámara iniciada');
+    }catch(e){
+      console.warn(e);
+      say('⚠️ No se pudo iniciar cámara (permisos/navegador)');
+    }
   }
-}
 
-// 1) Botón
-btnStart.addEventListener('click', startAR);
+  // Botón: click + touchstart (por si el navegador no emite click)
+  ['click','touchstart'].forEach(evt=>{
+    btnStart.addEventListener(evt, (ev)=>{ ev.preventDefault(); ev.stopPropagation(); startAR(); }, {passive:false});
+  });
 
-// 2) Auto-start cuando la escena está lista
-scene.addEventListener('loaded', () => {
-  const AUTO = true;
-  if (AUTO) startAR();
-});
+  // Auto-arranque cuando la escena está lista + primer toque en la pantalla
+  scene.addEventListener('loaded', ()=>{ try{ scene.renderer.setClearColor(0x000000,0); }catch{}; say('Scene lista'); startAR(); });
+  window.addEventListener('pointerup', ()=>startAR(), {once:true, passive:true});
 
-// 3) Por si el navegador exige gesto: primer toque en cualquier sitio
-window.addEventListener('pointerup', () => startAR(), { once:true, passive:true });
+  // Logs de tracking
+  anchor.addEventListener('targetFound', ()=>{ vid.play().catch(()=>{}); say('Target FOUND'); });
+  anchor.addEventListener('targetLost',  ()=>{ vid.pause(); say('Target LOST…'); });
 
-/* ===== Calibración ===== */
-const readout=document.getElementById('readout');
-function rerender(){ applyTransform(); }
-document.querySelectorAll('#cal [data-act]').forEach(b=>{
-  b.onclick=()=>{
-    const stepPx=6, stepSc=0.005, stepRt=0.2;
-    const a=b.dataset.act;
-    if(a==='dx-') CONF.dx-=stepPx; if(a==='dx+') CONF.dx+=stepPx;
-    if(a==='dy-') CONF.dy-=stepPx; if(a==='dy+') CONF.dy+=stepPx;
-    if(a==='sc-') CONF.scale=Math.max(0.9, CONF.scale-stepSc);
-    if(a==='sc+') CONF.scale=Math.min(1.1, CONF.scale+stepSc);
-    if(a==='rt-') CONF.rot-=stepRt; if(a==='rt+') CONF.rot+=stepRt;
-    rerender();
-  };
-});
-document.getElementById('copyUrl').onclick=async()=>{
-  const url=new URL(location.href);
-  url.searchParams.set('dx', String(Math.round(CONF.dx)));
-  url.searchParams.set('dy', String(Math.round(CONF.dy)));
-  url.searchParams.set('scale', String(+CONF.scale.toFixed(4)));
-  url.searchParams.set('rot', String(+CONF.rot.toFixed(2)));
-  try{ await navigator.clipboard.writeText(url.toString()); alert('URL copiada'); }catch(e){ prompt('Copia la URL:', url.toString()); }
-};
-// Ocultar panel de calibración si se pasa cal=0
-if(!CONF.showCal) document.getElementById('cal').style.display='none';
+  scene.addEventListener('arReady', ()=>say('Cámara OK'));
+  scene.addEventListener('arError',  e=>say('Error cámara/permisos'));
+})();
 </script>
 </body>
 </html>
