--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
              timeRight:{x:2060, y:2680, w:300, h:40, align:'right', color:'#000000', weight:600} };
 
   // Calibración desde URL (dx/dy/scale/rot)
-  const CAL={ dx:+(qs.get('dx')||0), dy:+(qs.get('dy')||0), scale:+(qs.get('scale')||1), rot:+(qs.get('rot')||0) };
+  const CAL = { dx:-30, dy:252, scale:1.1, rot:-0.6 };
+
 
   // ======= utilidades =======
   const scene=document.getElementById('scene');
